# dataguard

./: README.md  pyproject.toml
data/: data.csv  output.json  rules.yaml
src/dataguard/: cli.py  schemas.py  validator.py
